# wasm-web-checkers

./: .gitignore  .gitmodules  .prettierrc  LICENSE  README.md  WASM checker benchmark results.xlsx  benchmark.html  benchmark.js  index.html  js-worker.js  main.js  manifest.json  package.json  rs-worker.js  service-worker.tsconfig.json  sw.js  swipl-worker.js  tsconfig.json  webpack.config.prod.ts  webpack.config.ts  worker.tsconfig.json
.webpack/: webpack.config.base.ts  webpack.config.dev.ts  webpack.config.prod.ts  webpack.tsconfig.json
public/: benchmark.html  index.html  manifest.json
src/: App.ts  app.ts  benchmark.ts  board.ts  common.d.ts  common.ts  controls.ts  displayNames.ts  index.html  initEngine.ts  main.pl  main.ts  styles.sass  sw.ts  swipl.ts  typecheck.ts  util.ts  worker.ts
src/components/: Board.ts  BoardCell.ts  Controls.ts  Figure.ts  Queen.ts  Settings.ts  Square.ts
src/js/: common.ts  game.ts  index.ts  js.d.ts  worker.ts
src/rs/: game.ts  index.ts  types.ts  worker.ts
src/rs/checkers/: .gitignore  Cargo.toml
src/rs/checkers/checkers-js/: Cargo.toml
src/rs/checkers/checkers-js/src/: lib.rs  types.rs
src/rs/checkers/checkers-rs/: Cargo.toml
src/rs/checkers/checkers-rs-bin/: Cargo.toml
src/rs/checkers/checkers-rs-bin/src/: main.rs
src/rs/checkers/checkers-rs/src/: lib.rs
src/rs/checkers/checkers-rs/src/game/: evaluate.rs  filters.rs  mod.rs  move_rule.rs  moves.rs  rule_seq.rs  solution.rs
src/rs/checkers/checkers-rs/src/types/: board.rs  cell.rs  coord.rs  mod.rs  move_type.rs  piece.rs  player.rs  position.rs  row.rs  sizes.rs
src/rs/checkers/src/: handler.rs  jslib.rs  lib.rs  main.rs
src/rs/checkers/src/game/: filters.rs  mod.rs  move_rule.rs  moves.rs
src/rs/checkers/src/types/: board.rs  cell.rs  mod.rs  move_type.rs  piece.rs  player.rs  position.rs  row.rs  sizes.rs
swipl-wasm/: swipl-web.js
(+16 files in other folders)
