[package]
name = "checkers-rs"
version = "0.1.0"
authors = ["Yaroslav <q.link0.p@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.69"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
serde = { version = "1.0.125", features = ["derive"] }
serde-wasm-bindgen = "0.1.3"
js-sys = "0.3.50"
num_enum = "0.5.1"
