[package]
name = "checkers-rs-bin"
version = "0.1.0"
authors = ["Yaroslav <q.link0.p@gmail.com>"]
edition = "2018"

[features]
default = ["js"]
js = ["wasm", "js-sys"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.69", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
serde-wasm-bindgen = { version = "0.1.3", optional = true }
js-sys = { version = "0.3.50", optional = true }

serde = { version = "1.0.125", features = ["derive"] }
num_enum = "0.5.1"
